--- a/src/components/Cards/Cards.css
+++ b/src/components/Cards/Cards.css
@@ -66,7 +66,7 @@
     font-size: 12px;
     font-weight: 700;
     color: #fff;
-    background-color: #1f98f4;
+    /* background-color: #1f98f4; */
     box-sizing: border-box;
   }
   
@@ -81,7 +81,7 @@
     max-width: 100%;
     height: 100%;
     max-height: 100%;
-    object-fit: cover;
+    /* object-fit: cover; */
     transition: all 0.2s linear;
   }
   
@@ -93,10 +93,18 @@
     padding: 20px 30px 30px;
   }
   
+  .cards__item__title {
+    color: #252e48;
+    font-size: 30px;
+    line-height: 24px;
+    margin-bottom: 15px;
+    text-align: center;
+  }
   .cards__item__text {
     color: #252e48;
     font-size: 18px;
     line-height: 24px;
+    text-align: center;
   }
   
   @media only screen and (min-width: 1200px) {
