--- a/src/App.css
+++ b/src/App.css
@@ -30,9 +30,10 @@
   background-position: center;
   background-size: fill;
   background-repeat: no-repeat;
-  color: #fff;
-  font-size: 100px;
+  /* color: #fff;
+  font-size: 25px; */
 }
+
 
 .sign-up {
   background-image: url('./images/img-8.jpg');
