--- a/src/components/Cards/Cards.css
+++ b/src/components/Cards/Cards.css
@@ -106,6 +106,12 @@
     line-height: 24px;
     text-align: center;
   }
+  .git__item__text {
+    color:blue;
+    font-size: 14px;
+    line-height: 24px;
+    /* text-align: center; */
+  }
   
   @media only screen and (min-width: 1200px) {
     .content__blog__container {
