--- a/src/components/Cards/Cards.css
+++ b/src/components/Cards/Cards.css
@@ -115,6 +115,12 @@
     line-height: 24px;
     /* text-align: center; */
   }
+  .site__item__text {
+    color:blue;
+    font-size: 14px;
+    line-height: 24px;
+    padding-left: 125px;
+  }
   
   @media only screen and (min-width: 1200px) {
     .content__blog__container {
